Add CORS_ALLOWED_ORIGINS environment variable to docker-compose.yaml for frontend-backend communication